# gfold

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  DEVELOPING.md  LICENSE  Makefile  README.md  RELEASE.md  THANKS.md  TODO.md  bors.toml  flake.nix  justfile  rustfmt.toml
.cargo/: config  config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ci.yml  merge.yml  push.yml  release-dry-run.yml  release.yml  rust.yml  tag.yml
cli/: Cargo.toml
cli/src/: lib.rs
config/: Cargo.toml
crates/bench-loosely/: Cargo.toml
crates/bench-loosely/src/: main.rs
crates/gfold/: Cargo.toml
crates/gfold/src/: cli.rs  collector.rs  config.rs  display.rs  error.rs  main.rs  report.rs  repository_view.rs  run.rs  status.rs
crates/gfold/src/collector/: target.rs
crates/gfold/src/display/: color.rs
crates/gfold/src/report/: target.rs
crates/gfold/src/repository_view/: submodule_view.rs
crates/size/: Cargo.toml
crates/size/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/task/: bloat.rs  build.rs  build_release.rs  ci.rs  loose_bench.rs  prepare.rs
docs/: ADVANCED.md  CHANGELOG_PRE_CALVER_POST_V4.md  CHANGELOG_PRE_V4.md  COMMUNITY_THANKS.md  DEMO.md  DEVELOPING.md  EXTRA.md  MANUAL_INSTALL.md  RELEASE.md  THANKS.md  VERSIONING_SCHEME.md
gfld/: Cargo.toml
gfld/src/: lib.rs  main.rs
gfold/: Cargo.toml
gfold/src/: collector.rs  config.rs  display.rs  lib.rs  main.rs  repository_view.rs  status.rs  util.rs
gfold/src/display/: color.rs
lib/libgfold/: CHANGELOG.md  Cargo.toml  README.md
lib/libgfold-v5/: Cargo.toml
lib/libgfold-v5/src/: collector.rs  error.rs  lib.rs  repository_view.rs  status.rs
lib/libgfold-v5/src/collector/: target.rs
lib/libgfold-v5/src/repository_view/: submodule_view.rs
lib/libgfold/src/: collector.rs  lib.rs  repository_view.rs  status.rs
lib/libgfold/src/collector/: target.rs
lib/libgfold/src/repository_view/: submodule_view.rs
scripts/: README.md  bench-loosely.sh  install.sh  uninstall.sh
scripts/bench-loosely/: Cargo.toml
scripts/bench-loosely/src/: main.rs
scripts/compare-size/: Cargo.toml
scripts/compare-size/src/: main.rs
scripts/size/: Cargo.toml
scripts/size/src/: main.rs
src/: cli.rs  collector.rs  color.rs  config.rs  consts.rs  display.rs  driver.rs  error.rs  gfold.rs  internal_types.rs  lib.rs  logging.rs  main.rs  report.rs  repository_view.rs  result.rs  run.rs  status.rs  target_gen.rs  types.rs  util.rs
src/cli/: logging.rs  mod.rs
src/collector/: target.rs
src/display/: color.rs  mod.rs
src/report/: mod.rs  target.rs
src/repository_view/: submodule_view.rs
v2/: Cargo.toml
v2/src/: color.rs  dir.rs  run.rs  types.rs
v3/: Cargo.toml
v3/src/: cli.rs  config.rs  display.rs  error.rs  main.rs  status.rs  target_gen.rs
xtask/: Cargo.toml
xtask/src/: main.rs
