[workspace]
resolver = "3"
members = ["gfold", "xtask"]
default-members = ["gfold"]

[workspace.package]
edition = "2024"

[profile.release]
panic = "abort"
lto = true

[profile.release.package.gfold]
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.6", features = ["derive"] }
clap-verbosity-flag = "3.0"
clap_mangen = "0.2"
env_logger = { version = "0.11", features = [
  "humantime",
], default-features = false }
git2 = { version = "0.20", default-features = false }
log = "0.4"
rayon = "1.11"
remain = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
tempfile = "3.27"
toml = "1.1"
user_dirs = "0.2"
