[package]
name = "gfold"
version = "2026.3.0"
edition = "2024"

authors = ["Nick Gerace <nickagerace@gmail.com>"]
categories = ["command-line-utilities", "command-line-interface"]
description = "CLI tool to help keep track of your Git repositories."
homepage = "https://github.com/nickgerace/gfold"
keywords = ["git", "cli"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nickgerace/gfold"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.6", features = ["derive"] }
clap-verbosity-flag = "3.0"
clap_mangen = "0.2"
env_logger = { version = "0.11", features = [
  "humantime",
], default-features = false }
git2 = { version = "0.20", default-features = false }
log = "0.4"
rayon = "1.11"
remain = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
toml = "1.1"
user_dirs = "0.2"

[dev-dependencies]
tempfile = "3.27"
