[package]
name = "gfld"
version = "1.0.4"
license = "Apache-2.0"
authors = ["Nick Gerace <nickagerace@gmail.com>"]
description = "The minimal version of gfold, a CLI tool to help keep track of your Git repositories."
homepage = "https://nickgerace.dev"
repository = "https://github.com/nickgerace/gfold/"
readme = "../README.md"
edition = "2018"
keywords = ["git", "cli"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
git2 = { version = "^0", default-features = false }
log = { version = "^0", default-features = false }
walkdir = { version = "^2", default-features = false }
