[package]
name = "gfold"
version = "1.0.4"
license = "Apache-2.0"
authors = ["Nick Gerace <nickagerace@gmail.com>"]
description = "CLI tool to help keep track of your Git repositories."
homepage = "https://nickgerace.dev"
repository = "https://github.com/nickgerace/gfold/"
readme = "../README.md"
edition = "2018"
keywords = ["git", "cli"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
env_logger = "^0"
eyre = "^0"
git2 = "^0"
log = "^0"
prettytable-rs = "^0"
structopt = "^0"
