[package]
name = "gfold"
version = "2025.9.0"
edition.workspace = true
authors = ["Nick Gerace <nickagerace@gmail.com>"]
categories = ["command-line-utilities", "command-line-interface"]
description = "CLI tool to help keep track of your Git repositories."
homepage = "https://github.com/nickgerace/gfold"
keywords = ["git", "cli"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nickgerace/gfold"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
clap_mangen = { workspace = true }
env_logger = { workspace = true }
git2 = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
termcolor = { workspace = true }
toml = { workspace = true }
user_dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
