[package]
name = "v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0"
rayon = { version = "1", default-features = false }
termcolor = "1"
thiserror = "1"
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Add features as needed: ["termcolor", "regex"]
# Source: https://github.com/env-logger-rs/env_logger/blob/main/Cargo.toml#L47
env_logger = { version = "0", features = ["atty", "humantime"], default_features = false }