[package]
name = "libgfold"
version = "0.1.0"
edition = "2021"

# NOTE(nick): Temporary until libgfold is ready for release
publish = false

# TODO(nick): add categories and description
authors = ["Nick Gerace <nickagerace@gmail.com>"]
homepage = "https://nickgerace.dev"
keywords = ["git"]
license = "Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/nickgerace/gfold/"

[dependencies]
git2 = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
