[package]
name = "libgfold"
version = "0.1.1"
edition = "2021"

authors = ["Nick Gerace <nickagerace@gmail.com>"]
categories = ["development-tools"]
description = "Provides the ability to find a minimal set of user-relevant information for Git repositories on a local filesystem."
homepage = "https://nickgerace.dev"
keywords = ["git"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nickgerace/gfold/"

[dependencies]
git2 = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
