[package]
name = "libgfold"
version = "0.1.4"

categories = ["development-tools"]
description = "Provides the ability to find a minimal set of user-relevant information for Git repositories on a local filesystem."
keywords = ["git"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
git2 = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
